--- a/index.html
+++ b/index.html
@@ -73,22 +73,22 @@
       }
 
       #image1 {
-        background-image: url("./FCIimg1.png");
+        background-image: url("./image/1MTYtoROHD1.png");
       }
 
       #image2 {
-        background-image: url("./FCIimg2.png");
+        background-image: url("./image/1MTYtoROHD22.png");
       }
 
       #image3 {
-        background-image: url("./FCIimg3.png");
+        background-image: url("./image/1MTYtoROHD3.png");
       }
 
       #image4 {
-        background-image: url("./FCIimg4.png");
+        background-image: url("./image/1MTYtoROHD4.png");
       }
       #image5 {
-        background-image: url("./FCIimg5.png");
+        background-image: url("./image/1MTYtoROHD5.png");
       }
 
 
@@ -121,7 +121,7 @@
         background-color: #201A31;
         width: fit-content;
         padding: 0 5px;
-        margin-bottom: 10px;
+        margin-bottom: 0px;
         border-radius: 10px;
         position: absolute;
         bottom: 0;
@@ -133,50 +133,55 @@
   <body>
     <div class="container">
         <h3 class="h-title">
-            [ROHD:100일의 기록]은 <br/>
-            [성경낭독녹음]개발자가 만든 앱입니다.<br/>
-            하루 한장의 사진으로, 100일의 기록을 <br/>
-            동영상으로 만들어 주는 앱입니다.
+            [ROHD:100일의 기록]이 좋은 습관 형성을<br/>
+            형성하는데 도움이 되셨나요??<br/>
+            [ROHD]는 100일의 기간을 기록하는 앱이지만,<br/>
+            독서/운동/감사일기/루틴의 좋은 습관을<br/>
+            매일 기록하는 <br/>
+            [1MTY: One More Than Yesterday]<br/>
+            라는 앱도 있습니다.<br/>            
         </h3>
-      <div class="photos">
-        <div id="image1" class="photo-frame">
-          <span id="desc1" class="photo-description12">
-            1. [성경낭독녹음]의 일일 리포트를 모아서,<br/>
-            [ROHD 100일의 기록]에서 동영상으로 만들어보세요
-          </span>
-        </div>
-        <div id="image2" class="photo-frame">
+        <div class="photos">
+          <div id="image1" class="photo-frame">
             <span id="desc1" class="photo-description12">
-                2. 우선 구글플레이나, 앱스토어에서 [ROHD]를 검색하여 설치하세요.
-                그리고, 새로운 프로젝트를 만들어 주세요.
-              </span>
+              1. [1MTY]의 일일 리포트를 모아서,<br/>
+              [ROHD 100일의 기록]에서 동영상으로 만들어보세요
+            </span>
+          </div>
+          <div id="image2" class="photo-frame">
+              <span id="desc1" class="photo-description12">
+                  2. 우선 구글플레이나, 앱스토어에서 [1MTY]를 검색하여 설치하세요.
+                  매일 독서일기, 운동일기, 감사일기 그리고 루틴체크를 할 수 있습니다.
+                </span>
+          </div>
+          <div id="image3" class="photo-frame">
+              <span id="desc1" class="photo-description12">
+                  3. 감사일기 리포트의 ROHD버튼을 누르시면, 자동으로 일일 보고서가 [ROHD]로 전달되므로, 
+                  해당 프로젝트를 선택하신 후, 저장 버튼을 누르시면 됩니다.
+                </span>
+          </div>
+          <div id="image4" class="photo-frame">
+              <span id="desc1" class="photo-description12">
+                  4. 4가지 포맷을 고르신 후, 동영상 버튼을 눌러서 만들어 보시기 바랍니다.
+                  여러분의 일독 상황을 눈으로 보실 수 있을 것입니다.
+                </span>
+          </div>
+          <div id="image5" class="photo-frame">
+              <span id="desc1" class="photo-description12">
+                  5. 매일 올려야 하는데, 혹시 놓치셨다면, [1MTY]에서 일일리포트를 저장 한 후, 
+                  [ROHD]에서 읽어 오시면 됩니다.
+                </span>
+          </div>
         </div>
-        <div id="image3" class="photo-frame">
-            <span id="desc1" class="photo-description12">
-                3. 일일 리포트 위의 ROHD버튼을 누르시면, 자동으로 일일 보고서가 ROHD로 전달되므로, 
-                해당 프로젝트를 선택하신 후, 저장 버튼을 누르시면 됩니다.
-              </span>
-        </div>
-        <div id="image4" class="photo-frame">
-            <span id="desc1" class="photo-description12">
-                4. 4가지 포맷을 고르신 후, 동영상 버튼을 눌러서 만들어 보시기 바랍니다.
-                여러분의 일독 상황을 눈으로 보실 수 있을 것입니다.
-              </span>
-        </div>
-        <div id="image5" class="photo-frame">
-            <span id="desc1" class="photo-description12">
-                5. 매일 올려야 하는데, 혹시 놓치셨다면, 성경낭독녹음에서 일일리포트를 저장 한 후, 
-                ROHD에서 읽어 오시면 됩니다.
-              </span>
+        <div class="footer">
+          <p class="f-title2">
+              [ROHD]는 100일 프로젝트를 진행하는 것이고,<br/>
+              [1MTY]는 일상의 기록을 남기는 것입니다.<br/>
+              독서,운동,감사일기 그리고 루틴체크까지,<br>
+              이 네가지만 꾸준히 할 수 있다면,<br>
+              이미 성공한 삶일것입니다.</p>
+          <p class="f-date">FCI Inc.  2023.05</p>
         </div>
       </div>
-      <div class="footer">
-        <p class="f-title2">
-            매일 성경을 가까이 하시는 당신의 노력이,<br/>
-            하나의 동영상으로,<br/>
-            더욱 가치있게 남기를 바랍니다.</p>
-        <p class="f-date">FCI Inc.  2023.04</p>
-      </div>
-    </div>
   </body>
 </html>
