--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ROHDto1MTY</title>
+    <title>notice_ROHD</title>
     <style>
       /* 이서윤체 폰트 적용을 위한 코드 */
       @font-face {
@@ -17,7 +17,7 @@
 
       /* body태그 자체에 css 요소 부여 */
       body {
-        font-family: "LeeSeoyun";
+        /* font-family: "LeeSeoyun"; */
         margin: 0;
         display: flex;
         justify-content: center;
@@ -49,7 +49,7 @@
         align-items: center;
       }
       .h-title {
-        font-size: 20px;
+        font-size: 16px;
         font-weight: 500;
         color: white;
         margin-left : 30px;
@@ -60,7 +60,7 @@
         color: white;
       }
       .f-title2 {
-        font-size: 20px;
+        font-size: 15px;
         font-weight: 500;
         color: white;
         margin-left : 20px;
@@ -127,19 +127,21 @@
         bottom: 0;
         transform: translate(-5%);
         left: 10%;
+        font-size: 13px;
       }
     </style>
   </head>
   <body>
     <div class="container">
         <h3 class="h-title">
-            [ROHD:100일의 기록]이 좋은 습관 형성을<br/>
-            형성하는데 도움이 되셨나요??<br/>
-            [ROHD]는 100일의 기간을 기록하는 앱이지만,<br/>
-            독서/운동/감사일기/루틴의 좋은 습관을<br/>
-            매일 기록하는 <br/>
+            [ROHD:100일의 기록]이 좋은 습관을<br/>
+            만드시는데 도움이 되고 계신가요??<br/><br>
+            [ROHD]는 100일의 기록으로<br>
+            동영상을 만드는 앱이므로,<br/>
+            독서/운동/감사일기/루틴의 좋은 습관들을<br/>
+            매일 간단하게 기록하는 <br/>
             [1MTY: One More Than Yesterday]<br/>
-            라는 앱도 있습니다.<br/>            
+            라는 앱과 같이 쓰셔도 좋습니다.<br/>            
         </h3>
         <div class="photos">
           <div id="image1" class="photo-frame">
@@ -174,12 +176,12 @@
           </div>
         </div>
         <div class="footer">
-          <p class="f-title2">
+          <!-- <p class="f-title2">
               [ROHD]는 100일 프로젝트를 진행하는 것이고,<br/>
               [1MTY]는 일상의 기록을 남기는 것입니다.<br/>
               독서,운동,감사일기 그리고 루틴체크까지,<br>
               이 네가지만 꾸준히 할 수 있다면,<br>
-              이미 성공한 삶일것입니다.</p>
+              이미 성공한 삶일것입니다.</p> -->
           <p class="f-date">FCI Inc.  2023.05</p>
         </div>
       </div>
