--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       /* body태그 자체에 css 요소 부여 */
       body {
-        /* font-family: "LeeSeoyun"; */
+        font-family: "LeeSeoyun";
         margin: 0;
         display: flex;
         justify-content: center;
